# Alakoro_FiberSense

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  README.md  USER_GUIDE.md  commit_to_github.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml  release.yml  tests.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  connection_manager.py  consumers.py  controllers.py  main.py  models.py  views.py
backend/app/core/: __init__.py  config.py  events.py  redis_client.py
backend/app/routers/: __init__.py  das.py  dss.py  dts.py  export.py  simulation.py  upload.py  wavelet.py
backend/app/simulation/: __init__.py  das_simulator.py  dss_simulator.py  dts_simulator.py
backend/engine/: CMakeLists.txt  py_bindings.cpp
backend/engine/src/: fiber_types.h  signal_processor.cpp  signal_processor.h  wavelet_transforms.cpp  wavelet_transforms.h
config/: default.yaml  logging.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: Alakoro_Demo.ipynb  CHANGELOG.md  README.md  SECURITY.md
docs/sphinx/: Makefile
docs/sphinx/source/: api_reference.rst  changelog.rst  conf.py  contributing.rst  index.rst  install.rst  signatures.rst  user_guide.rst
frontend/: Dockerfile  index.html  package.json
frontend/src/: index.css
frontend/src/components/: AlertPanel.tsx  ConfigPanel.tsx  Dashboard.tsx  FrequencyPlot.tsx  ProfilePlot.tsx  SignalUploader.tsx  SimulationPanel.tsx  SpectrogramPlot.tsx  StatusBar.tsx  WaterfallPlot.tsx
frontend/src/lib/: api.ts  signalStore.ts  useWebSocket.ts
frontend/src/types/: index.ts
install/: INSTALL_GUI.py  INSTALL_UNIX.sh  INSTALL_WINDOWS.bat
k8s/base/: backend-deployment.yaml  backend-hpa.yaml  backend-service.yaml  celery-deployment.yaml  configmap.yaml  consumer-das-deployment.yaml  consumer-dss-deployment.yaml  consumer-dts-deployment.yaml  engine-daemonset.yaml  frontend-deployment.yaml  frontend-hpa.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  prometheus.yml  pvc.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
scripts/: backup.sh  benchmark.py  generate_test_data.py  restore.sh  run_pipeline.py  setup.sh
src/: __init__.py
src/cpp/bindings/: bindings.cpp  das_decoder_binding.cpp  event_detector_binding.cpp  signal_processor_binding.cpp
src/cpp/core/: das_decoder.cpp  event_detector.cpp  filter_bank.cpp  signal_processor.cpp
src/cpp/include/alakoro/: das_decoder.hpp  event_detector.hpp  filter_bank.hpp  signal_processor.hpp
src/events/: __init__.py  fibersense_event_schema_v1.1.0.json
src/processing/: __init__.py  lfdas_processor.py
src/python/: __init__.py
src/python/controllers/: __init__.py  data_controller.py  event_controller.py  pipeline_controller.py
src/python/events/: __init__.py  event_bus.py
src/python/models/: __init__.py  config.py  das_data.py  das_event.py
src/python/services/: __init__.py  data_loader_service.py  detection_service.py  processing_service.py  streaming_service.py
src/python/views/: __init__.py  dashboard_view.py  data_view.py  event_view.py
src/simulation/: __init__.py  signature_generator.py
src/validation/: __init__.py  signature_validator.py
tests/: __init__.py  test_alakoro_fibersense.py
tests/cpp/: CMakeLists.txt  test_das_decoder.cpp  test_event_detector.cpp  test_signal_processor.cpp
tests/python/: test_event_bus.py  test_models.py  test_services.py
