[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10.0",
    "numpy>=1.21.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "Alakoro_FiberSense"
version = "1.0.0"
description = "Sistema de Processamento de Dados de Fibra Optica (DAS) - Arquitetura Event-Driven + MVC"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luiz Paulo Colombiano"}
]
keywords = ["das", "fibra-optica", "sensoriamento", "petroleo", "event-driven", "mvc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "h5py>=3.6.0",
    "pyyaml>=6.0",
    "pika>=1.3.0",
    "redis>=4.3.0",
    "pydantic>=1.10.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "websockets>=11.0",
    "asyncio-mqtt>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/Colombiano/Alakoro_FiberSense"
Repository = "https://github.com/Colombiano/Alakoro_FiberSense"
Issues = "https://github.com/Colombiano/Alakoro_FiberSense/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
