[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alakoro-fibersense"
version = "2.2.1"
description = "Alakoro FiberSense — Plataforma Open-Source Multi-Modal para DFOS em Poços de Petróleo / Open-Source Multi-Modal Platform for DFOS in Oil & Gas Wells"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luiz Paulo Colombiano", email = "seu_email@exemplo.com"}
]
maintainers = [
    {name = "Luiz Paulo Colombiano", email = "seu_email@exemplo.com"}
]
keywords = [
    "dfos", "das", "dts", "dss", "fiber-optic", "oil-gas", "petroleum",
    "well-monitoring", "distributed-sensing", "frac", "cementing",
    "joule-thomson", "lf-das", "exdts", "fibersense", "alakoro"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: English",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/Colombiano/Alakoro_FiberSense"
Documentation = "https://github.com/Colombiano/Alakoro_FiberSense/blob/main/USER_GUIDE.md"
Repository = "https://github.com/Colombiano/Alakoro_FiberSense.git"
Issues = "https://github.com/Colombiano/Alakoro_FiberSense/issues"
Changelog = "https://github.com/Colombiano/Alakoro_FiberSense/blob/main/CHANGELOG.md"

[project.scripts]
alakoro = "src.__init__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "install*", "docs*"]

[tool.setuptools.package-data]
"src.events" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --color=yes"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503"]
